test/error/scan/CyrSignAfterNonConsonant.mod
MODULE CyrSignAfterNonConsonant;

VAR ะะช: INTEGER;

END CyrSignAfterNonConsonant.
